--- a/main.xib
+++ b/main.xib
@@ -8,7 +8,6 @@
 		<string key="IBDocument.HIToolboxVersion">353.00</string>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<integer value="24"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -284,6 +283,15 @@
 							<string key="NSTitle">View</string>
 							<object class="NSMutableArray" key="NSMenuItems">
 								<bool key="EncodedWithXMLCoder">YES</bool>
+								<object class="NSMenuItem" id="650264296">
+									<reference key="NSMenu" ref="371320976"/>
+									<string key="NSTitle">Enter Full Screen</string>
+									<string key="NSKeyEquiv">f</string>
+									<int key="NSKeyEquivModMask">1048576</int>
+									<int key="NSMnemonicLoc">2147483647</int>
+									<reference key="NSOnImage" ref="229763992"/>
+									<reference key="NSMixedImage" ref="909111550"/>
+								</object>
 							</object>
 						</object>
 					</object>
@@ -486,62 +494,6 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBActionConnection" key="connection">
-						<string key="label">nextWordFrontDocument:</string>
-						<reference key="source" ref="867656923"/>
-						<reference key="destination" ref="558535904"/>
-					</object>
-					<int key="connectionID">507</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBActionConnection" key="connection">
-						<string key="label">previousWordFrontDocument:</string>
-						<reference key="source" ref="867656923"/>
-						<reference key="destination" ref="38786516"/>
-					</object>
-					<int key="connectionID">508</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBBindingConnection" key="connection">
-						<string key="label">enabled: frontDocument.book</string>
-						<reference key="source" ref="558535904"/>
-						<reference key="destination" ref="867656923"/>
-						<object class="NSNibBindingConnector" key="connector">
-							<reference key="NSSource" ref="558535904"/>
-							<reference key="NSDestination" ref="867656923"/>
-							<string key="NSLabel">enabled: frontDocument.book</string>
-							<string key="NSBinding">enabled</string>
-							<string key="NSKeyPath">frontDocument.book</string>
-							<object class="NSDictionary" key="NSOptions">
-								<string key="NS.key.0">NSValueTransformerName</string>
-								<string key="NS.object.0">NSIsNotNil</string>
-							</object>
-							<int key="NSNibBindingConnectorVersion">2</int>
-						</object>
-					</object>
-					<int key="connectionID">514</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBBindingConnection" key="connection">
-						<string key="label">enabled: frontDocument.book</string>
-						<reference key="source" ref="38786516"/>
-						<reference key="destination" ref="867656923"/>
-						<object class="NSNibBindingConnector" key="connector">
-							<reference key="NSSource" ref="38786516"/>
-							<reference key="NSDestination" ref="867656923"/>
-							<string key="NSLabel">enabled: frontDocument.book</string>
-							<string key="NSBinding">enabled</string>
-							<string key="NSKeyPath">frontDocument.book</string>
-							<object class="NSDictionary" key="NSOptions">
-								<string key="NS.key.0">NSValueTransformerName</string>
-								<string key="NS.object.0">NSIsNotNil</string>
-							</object>
-							<int key="NSNibBindingConnectorVersion">2</int>
-						</object>
-					</object>
-					<int key="connectionID">517</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBActionConnection" key="connection">
 						<string key="label">startFrontDocument:</string>
 						<reference key="source" ref="867656923"/>
 						<reference key="destination" ref="325690925"/>
@@ -555,6 +507,92 @@
 						<reference key="destination" ref="215847526"/>
 					</object>
 					<int key="connectionID">535</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">frontDocumentEnterFullScreen:</string>
+						<reference key="source" ref="867656923"/>
+						<reference key="destination" ref="650264296"/>
+					</object>
+					<int key="connectionID">546</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">nextWordFrontDocument:</string>
+						<reference key="source" ref="867656923"/>
+						<reference key="destination" ref="558535904"/>
+					</object>
+					<int key="connectionID">547</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">previousWordFrontDocument:</string>
+						<reference key="source" ref="867656923"/>
+						<reference key="destination" ref="38786516"/>
+					</object>
+					<int key="connectionID">548</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBBindingConnection" key="connection">
+						<string key="label">enabled: frontDocument.book</string>
+						<reference key="source" ref="38786516"/>
+						<reference key="destination" ref="867656923"/>
+						<object class="NSNibBindingConnector" key="connector">
+							<reference key="NSSource" ref="38786516"/>
+							<reference key="NSDestination" ref="867656923"/>
+							<string key="NSLabel">enabled: frontDocument.book</string>
+							<string key="NSBinding">enabled</string>
+							<string key="NSKeyPath">frontDocument.book</string>
+							<object class="NSDictionary" key="NSOptions">
+								<bool key="EncodedWithXMLCoder">YES</bool>
+								<object class="NSMutableArray" key="dict.sortedKeys">
+									<bool key="EncodedWithXMLCoder">YES</bool>
+									<string>NSNotApplicablePlaceholder</string>
+									<string>NSRaisesForNotApplicableKeys</string>
+									<string>NSValueTransformerName</string>
+								</object>
+								<object class="NSMutableArray" key="dict.values">
+									<bool key="EncodedWithXMLCoder">YES</bool>
+									<integer value="0" id="8"/>
+									<boolean value="NO" id="6"/>
+									<string>NSIsNotNil</string>
+								</object>
+							</object>
+							<int key="NSNibBindingConnectorVersion">2</int>
+						</object>
+					</object>
+					<int key="connectionID">553</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBBindingConnection" key="connection">
+						<string key="label">enabled: frontDocument.book</string>
+						<reference key="source" ref="558535904"/>
+						<reference key="destination" ref="867656923"/>
+						<object class="NSNibBindingConnector" key="connector">
+							<reference key="NSSource" ref="558535904"/>
+							<reference key="NSDestination" ref="867656923"/>
+							<string key="NSLabel">enabled: frontDocument.book</string>
+							<string key="NSBinding">enabled</string>
+							<string key="NSKeyPath">frontDocument.book</string>
+							<object class="NSDictionary" key="NSOptions">
+								<bool key="EncodedWithXMLCoder">YES</bool>
+								<object class="NSMutableArray" key="dict.sortedKeys">
+									<bool key="EncodedWithXMLCoder">YES</bool>
+									<string>NSNotApplicablePlaceholder</string>
+									<string>NSRaisesForNotApplicableKeys</string>
+									<string>NSValueTransformerName</string>
+								</object>
+								<object class="NSMutableArray" key="dict.values">
+									<bool key="EncodedWithXMLCoder">YES</bool>
+									<reference ref="8"/>
+									<reference ref="6"/>
+									<string>NSIsNotNil</string>
+								</object>
+							</object>
+							<int key="NSNibBindingConnectorVersion">2</int>
+						</object>
+					</object>
+					<int key="connectionID">554</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -870,8 +908,14 @@
 						<reference key="object" ref="371320976"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="650264296"/>
 						</object>
 						<reference key="parent" ref="497930657"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">545</int>
+						<reference key="object" ref="650264296"/>
+						<reference key="parent" ref="371320976"/>
 					</object>
 				</object>
 			</object>
@@ -948,7 +992,9 @@
 					<string>5.IBPluginDependency</string>
 					<string>5.ImportedFromIB2</string>
 					<string>540.IBPluginDependency</string>
+					<string>541.IBEditorWindowLastContentRect</string>
 					<string>541.IBPluginDependency</string>
+					<string>545.IBPluginDependency</string>
 					<string>56.IBPluginDependency</string>
 					<string>56.ImportedFromIB2</string>
 					<string>57.IBEditorWindowLastContentRect</string>
@@ -1021,7 +1067,7 @@
 					<reference ref="9"/>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<reference ref="9"/>
-					<string>{{369, 142}, {211, 73}}</string>
+					<string>{{419, 142}, {211, 73}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<reference ref="9"/>
 					<string>{{525, 802}, {197, 73}}</string>
@@ -1040,6 +1086,8 @@
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<reference ref="9"/>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>{{369, 209}, {64, 6}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -1084,9 +1132,20 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">544</int>
+			<int key="maxID">554</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<bool key="EncodedWithXMLCoder">YES</bool>
+				<object class="IBPartialClassDescription">
+					<string key="className">NSMenuItem</string>
+					<string key="superclassName">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBUserSource</string>
+						<string key="minorKey"/>
+					</object>
+				</object>
+			</object>
 			<object class="NSMutableArray" key="referencedPartialClassDescriptionsV3.1+">
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<object class="IBPartialClassDescription">
@@ -1096,6 +1155,7 @@
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="NSMutableArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>frontDocumentEnterFullScreen:</string>
 							<string>nextWordFrontDocument:</string>
 							<string>previousWordFrontDocument:</string>
 							<string>showPreferences:</string>
@@ -1104,6 +1164,7 @@
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>id</string>
 							<string>id</string>
 							<string>id</string>
 							<string>id</string>
